src/our-story/our-story-timeline.module.css
/*--- Timeline Content ---*/
.timelineContent {
  line-height: 22px;
  font-family: "Montserrat", sans-serif;
  font-size: 14pt;
  text-align: justify;
  color: var(--light-grey);
  padding-top: 20px;
}

.yearContent{
  line-height: 22px;
  font-family: "Montserrat", sans-serif;
  padding-left:30px;
  font-size: 14pt;
  color: #FFFFFF;
  margin: 0 auto;
}

.timelineSeparator{
  color:#C4C4C4;
}

